Been slack on committing. Various changes

--- a/R/enrichment.Rmd
+++ b/R/enrichment.Rmd
@@ -7,7 +7,7 @@ output:
   html_document:
     toc: true
     toc_float: true
-    toc_depth: 3
+    toc_depth: 2
     fig_width: 8
     fig_height: 6
     fig_align: "center"
@@ -68,7 +68,7 @@ cores <- availableCores() - 1
 source("~/bioinformatics/bioToolkit/lbFuncs.R")
 ```
 
-## Annotations
+## EnsDb
 
 ```{r ensParams}
 ens_species <- "Danio rerio"
@@ -201,13 +201,7 @@ topTables <- readRDS(here("files/topTables.Rds")) %>%
 deGenes <- lapply(topTables, function(tt){
   dplyr::filter(tt, DE) %>%
     pull(gene_id)
-}) 
-```
-
-## Variant data
-
-```{r diss_winRanges}
-diss_winRanges <- readRDS(here("files/diss_winRanges.Rds"))
+})
 ```
 
 # Gene sets
@@ -490,18 +484,20 @@ hm_fry_eqtl <- colnames(contrasts) %>%
           contrast = contrasts[,cont],
           sort = "mixed"
         ) %>%
+        dplyr::filter(NGenes > 0) %>%
         rownames_to_column("Pathway") %>%
         as_tibble() %>%
         mutate(
           diversity_threshold = threshVal,
           rank = row_number(),
-          sig = factor(
-            ifelse(FDR.Mixed < 0.05, "DE", "Not DE"),
-            levels = c("DE", "Not DE")
-          )
+          sig = FDR.Mixed < 0.05
         )
     })
   }, simplify = FALSE)
+```
+
+```{r}
+hm_cols <- setNames(hue_pal()(length(names(hmByID))), names(hmByID))
 ```
 
 ```{r}
@@ -534,9 +530,9 @@ rankPlots_hm_fry <- sapply(colnames(contrasts), function(cont){
     ggplot(aes(
       diversity_threshold,
       rel_rank,
-      # -log10(FDR.Mixed),
       group = Pathway,
       colour = Pathway,
+      fill = factor(ifelse(sig, Pathway, NA)),
       text = sprintf(
         paste0(
           "Pathway: %s<br>",
@@ -550,12 +546,13 @@ rankPlots_hm_fry <- sapply(colnames(contrasts), function(cont){
       )
     )) +
     geom_line() +
-    geom_point(aes(shape = sig), size = 4) +
+    geom_point(shape = 21, size = 4) +
     geom_text(aes(label = rank), colour = "black", size = 2.1) +
     geom_text(aes(x = 1.01, label = label), size = 3.2, hjust = 0, na.rm = TRUE) +
     scale_y_reverse(breaks = seq(1, length(hm_fry_eqtl_top[[cont]]), 1)) +
     scale_x_continuous(breaks = thresholds) +
-    scale_shape_manual(values = c(19, 17)) +
+    scale_fill_manual(values = hm_cols, na.value="white") +
+    scale_colour_manual(values = hm_cols) +
     labs(x = "Diversity score cut-off", y = "\nRelative rank") +
     theme(plot.margin = margin(0, 5, 0, 0, unit = "cm")) +
     coord_cartesian(clip = "off") +
@@ -564,13 +561,60 @@ rankPlots_hm_fry <- sapply(colnames(contrasts), function(cont){
       panel.grid.minor.y = element_blank(),
       panel.grid.major.y = element_blank(),
       panel.grid.minor.x = element_blank(),
-      panel.grid.major.x = element_blank(),
       panel.border = element_blank(),
       axis.title.x = element_blank(),
-      axis.text.x = element_blank(),
-      axis.ticks.x = element_blank()
     )
   # }, tooltip = "text")
+}, simplify = FALSE)
+```
+
+```{r}
+hm_fry_eqtl_sig <- sapply(hm_fry_eqtl, function(contrast){
+  lapply(contrast, function(threshold){
+    threshold %>%
+      dplyr::filter(sig) %>%
+      pull(Pathway)
+  }) %>%
+    unlist() %>%
+    unique()
+}, simplify = FALSE)
+```
+
+```{r}
+pPlots_hm_fry <- sapply(colnames(contrasts), function(cont){
+  lapply(hm_fry_eqtl[[cont]], function(threshold){
+    threshold %>%
+      dplyr::filter(Pathway %in% hm_fry_eqtl_sig[[cont]]) %>%
+      mutate(rel_rank = row_number())
+  }) %>%
+    bind_rows() %>%
+    mutate(
+      label = ifelse(
+        diversity_threshold == 1,
+        str_trunc(Pathway, width = 30),
+        NA
+      )
+    ) %>%
+    ggplot(aes(
+      diversity_threshold,
+      -log10(PValue.Mixed),
+      group = Pathway,
+      colour = Pathway,
+      fill = factor(ifelse(sig, Pathway, NA))
+    )) +
+    geom_line() +
+    geom_point(shape = 21, size = 4) +
+    geom_text(aes(label = NGenes), colour = "black", size = 2.1) +
+    scale_x_continuous(breaks = thresholds) +
+    scale_colour_manual(values = hm_cols) +
+    scale_fill_manual(values = hm_cols, na.value="white") +
+    labs(x = "Diversity threshold", y = log10plab) +
+    facet_wrap(~Pathway, ncol = 2) +
+    theme(
+      legend.position = "none",
+      panel.grid.minor.y = element_blank(),
+      panel.grid.minor.x = element_blank(),
+    )
 }, simplify = FALSE)
 ```
 
@@ -586,6 +630,12 @@ ggarrange(
 )
 ```
 
+```{r}
+if (length(hm_fry_eqtl_sig$EOfADvsWT)) {
+  pPlots_hm_fry$EOfADvsWT
+}
+```
+
 #### MPS vs WT
 
 ```{r}
@@ -596,6 +646,12 @@ ggarrange(
   ncol = 1,
   heights = c(4,0.2,1)
 )
+```
+
+```{r}
+if (length(hm_fry_eqtl_sig$MPSvsWT)) {
+  pPlots_hm_fry$MPSvsWT
+}
 ```
 
 ### KEGG {.tabset .tabset-pills}
@@ -618,16 +674,13 @@ kg_fry_eqtl <- colnames(contrasts) %>%
           contrast = contrasts[,cont],
           sort = "mixed"
         ) %>%
+        dplyr::filter(NGenes > 0) %>%
         rownames_to_column("Pathway") %>%
         as_tibble() %>%
         mutate(
           diversity_threshold = threshVal,
           rank = row_number(),
           sig = FDR.Mixed < 0.05
-          #   factor(
-          #   ifelse(FDR.Mixed < 0.05, "DE", "Not DE"),
-          #   levels = c("DE", "Not DE")
-          # )
         )
     })
   }, simplify = FALSE)
@@ -734,7 +787,7 @@ pPlots_kg_fry <- sapply(colnames(contrasts), function(cont){
     ) %>%
     ggplot(aes(
       diversity_threshold,
-      -log10(PValue),
+      -log10(PValue.Mixed),
       group = Pathway,
       colour = Pathway,
       fill = factor(ifelse(sig, Pathway, NA))
@@ -768,7 +821,9 @@ ggarrange(
 ```
 
 ```{r}
-pPlots_kg_fry$EOfADvsWT
+if (length(kg_fry_eqtl_sig$EOfADvsWT)) {
+  pPlots_kg_fry$EOfADvsWT
+}
 ```
 
 #### MPS vs WT
@@ -784,7 +839,9 @@ ggarrange(
 ```
 
 ```{r}
-pPlots_kg_fry$MPSvsWT
+if (length(kg_fry_eqtl_sig$MPSvsWT)) {
+  pPlots_kg_fry$MPSvsWT
+}
 ```
 
 ### Wikipathways {.tabset .tabset-pills}
@@ -807,18 +864,20 @@ wk_fry_eqtl <- colnames(contrasts) %>%
           contrast = contrasts[,cont],
           sort = "mixed"
         ) %>%
+        dplyr::filter(NGenes > 0) %>%
         rownames_to_column("Pathway") %>%
         as_tibble() %>%
         mutate(
           diversity_threshold = threshVal,
           rank = row_number(),
-          sig = factor(
-            ifelse(FDR.Mixed < 0.05, "DE", "Not DE"),
-            levels = c("DE", "Not DE")
-          )
+          sig = FDR.Mixed < 0.05
         )
     })
   }, simplify = FALSE)
+```
+
+```{r}
+wk_cols <- setNames(hue_pal()(length(names(wkByID))), names(wkByID))
 ```
 
 ```{r}
@@ -851,9 +910,9 @@ rankPlots_wk_fry <- sapply(colnames(contrasts), function(cont){
     ggplot(aes(
       diversity_threshold,
       rel_rank,
-      # -log10(FDR.Mixed),
       group = Pathway,
       colour = Pathway,
+      fill = factor(ifelse(sig, Pathway, NA)),
       text = sprintf(
         paste0(
           "Pathway: %s<br>",
@@ -867,12 +926,13 @@ rankPlots_wk_fry <- sapply(colnames(contrasts), function(cont){
       )
     )) +
     geom_line() +
-    geom_point(aes(shape = sig), size = 4) +
+    geom_point(shape = 21, size = 4) +
     geom_text(aes(label = rank), colour = "black", size = 2.1) +
     geom_text(aes(x = 1.01, label = label), size = 3.2, hjust = 0, na.rm = TRUE) +
     scale_y_reverse(breaks = seq(1, length(wk_fry_eqtl_top[[cont]]), 1)) +
     scale_x_continuous(breaks = thresholds) +
-    scale_shape_manual(values = c(19, 17)) +
+    scale_fill_manual(values = wk_cols, na.value="white") +
+    scale_colour_manual(values = wk_cols) +
     labs(x = "Diversity score cut-off", y = "\nRelative rank") +
     theme(plot.margin = margin(0, 5, 0, 0, unit = "cm")) +
     coord_cartesian(clip = "off") +
@@ -881,13 +941,60 @@ rankPlots_wk_fry <- sapply(colnames(contrasts), function(cont){
       panel.grid.minor.y = element_blank(),
       panel.grid.major.y = element_blank(),
       panel.grid.minor.x = element_blank(),
-      panel.grid.major.x = element_blank(),
       panel.border = element_blank(),
       axis.title.x = element_blank(),
-      axis.text.x = element_blank(),
-      axis.ticks.x = element_blank()
     )
   # }, tooltip = "text")
+}, simplify = FALSE)
+```
+
+```{r}
+wk_fry_eqtl_sig <- sapply(wk_fry_eqtl, function(contrast){
+  lapply(contrast, function(threshold){
+    threshold %>%
+      dplyr::filter(sig) %>%
+      pull(Pathway)
+  }) %>%
+    unlist() %>%
+    unique()
+}, simplify = FALSE)
+```
+
+```{r}
+pPlots_wk_fry <- sapply(colnames(contrasts), function(cont){
+  lapply(wk_fry_eqtl[[cont]], function(threshold){
+    threshold %>%
+      dplyr::filter(Pathway %in% wk_fry_eqtl_sig[[cont]]) %>%
+      mutate(rel_rank = row_number())
+  }) %>%
+    bind_rows() %>%
+    mutate(
+      label = ifelse(
+        diversity_threshold == 1,
+        str_trunc(Pathway, width = 30),
+        NA
+      )
+    ) %>%
+    ggplot(aes(
+      diversity_threshold,
+      -log10(PValue.Mixed),
+      group = Pathway,
+      colour = Pathway,
+      fill = factor(ifelse(sig, Pathway, NA))
+    )) +
+    geom_line() +
+    geom_point(shape = 21, size = 4) +
+    geom_text(aes(label = NGenes), colour = "black", size = 2.1) +
+    scale_x_continuous(breaks = thresholds) +
+    scale_colour_manual(values = wk_cols) +
+    scale_fill_manual(values = wk_cols, na.value="white") +
+    labs(x = "Diversity threshold", y = log10plab) +
+    facet_wrap(~Pathway, ncol = 2) +
+    theme(
+      legend.position = "none",
+      panel.grid.minor.y = element_blank(),
+      panel.grid.minor.x = element_blank(),
+    )
 }, simplify = FALSE)
 ```
 
@@ -903,6 +1010,12 @@ ggarrange(
 )
 ```
 
+```{r}
+if (length(wk_fry_eqtl_sig$EOfADvsWT)) {
+  pPlots_wk_fry$EOfADvsWT
+}
+```
+
 #### MPS vs WT
 
 ```{r}
@@ -913,6 +1026,12 @@ ggarrange(
   ncol = 1,
   heights = c(4,0.2,1)
 )
+```
+
+```{r}
+if (length(wk_fry_eqtl_sig$MPSvsWT)) {
+  pPlots_wk_fry$MPSvsWT
+}
 ```
 
 ## GSEA
@@ -938,6 +1057,7 @@ ranks_nd <- lapply(topTables, function(x){
 ### Hallmark {.tabset .tabset-pills}
 
 ```{r hm_gsea_eqtl}
+set.seed(220615)
 hm_gsea_eqtl <- colnames(contrasts) %>%
   sapply(function(cont){
     lapply(thresholds, function(threshVal){
@@ -959,13 +1079,14 @@ hm_gsea_eqtl <- colnames(contrasts) %>%
           diversity_threshold = threshVal,
           rank = row_number(),
           bonf.p.adj = p.adjust(pval, "bonferroni"),
-          sig = factor(
-            ifelse(bonf.p.adj < 0.05, "DE", "Not DE"),
-            levels = c("DE", "Not DE")
-          )
+          sig = bonf.p.adj < 0.05
         )
     })
   }, simplify = FALSE)
+```
+
+```{r}
+hm_cols <- setNames(hue_pal()(length(names(hmByID))), names(hmByID))
 ```
 
 ```{r}
@@ -998,9 +1119,9 @@ rankPlots_hm_gsea <- sapply(colnames(contrasts), function(cont){
     ggplot(aes(
       diversity_threshold,
       rel_rank,
-      # -log10(FDR.Mixed),
       group = Pathway,
       colour = Pathway,
+      fill = factor(ifelse(sig, Pathway, NA)),
       text = sprintf(
         paste0(
           "Pathway: %s<br>",
@@ -1014,12 +1135,13 @@ rankPlots_hm_gsea <- sapply(colnames(contrasts), function(cont){
       )
     )) +
     geom_line() +
-    geom_point(aes(shape = sig), size = 4) +
+    geom_point(shape = 21, size = 4) +
     geom_text(aes(label = rank), colour = "black", size = 2.1) +
     geom_text(aes(x = 1.01, label = label), size = 3.2, hjust = 0, na.rm = TRUE) +
     scale_y_reverse(breaks = seq(1, length(hm_gsea_eqtl_top[[cont]]), 1)) +
     scale_x_continuous(breaks = thresholds) +
-    scale_shape_manual(values = c(17, 19)) +
+    scale_fill_manual(values = hm_cols, na.value="white") +
+    scale_colour_manual(values = hm_cols) +
     labs(x = "Diversity score cut-off", y = "\nRelative rank") +
     theme(plot.margin = margin(0, 5, 0, 0, unit = "cm")) +
     coord_cartesian(clip = "off") +
@@ -1028,13 +1150,60 @@ rankPlots_hm_gsea <- sapply(colnames(contrasts), function(cont){
       panel.grid.minor.y = element_blank(),
       panel.grid.major.y = element_blank(),
       panel.grid.minor.x = element_blank(),
-      panel.grid.major.x = element_blank(),
       panel.border = element_blank(),
       axis.title.x = element_blank(),
-      axis.text.x = element_blank(),
-      axis.ticks.x = element_blank()
     )
   # }, tooltip = "text")
+}, simplify = FALSE)
+```
+
+```{r}
+hm_gsea_eqtl_sig <- sapply(hm_gsea_eqtl, function(contrast){
+  lapply(contrast, function(threshold){
+    threshold %>%
+      dplyr::filter(sig) %>%
+      pull(Pathway)
+  }) %>%
+    unlist() %>%
+    unique()
+}, simplify = FALSE)
+```
+
+```{r}
+pPlots_hm_gsea <- sapply(colnames(contrasts), function(cont){
+  lapply(hm_gsea_eqtl[[cont]], function(threshold){
+    threshold %>%
+      dplyr::filter(Pathway %in% hm_gsea_eqtl_sig[[cont]]) %>%
+      mutate(rel_rank = row_number())
+  }) %>%
+    bind_rows() %>%
+    mutate(
+      label = ifelse(
+        diversity_threshold == 1,
+        str_trunc(Pathway, width = 30),
+        NA
+      )
+    ) %>%
+    ggplot(aes(
+      diversity_threshold,
+      -log10(pval),
+      group = Pathway,
+      colour = Pathway,
+      fill = factor(ifelse(sig, Pathway, NA))
+    )) +
+    geom_line() +
+    geom_point(shape = 21, size = 4) +
+    geom_text(aes(label = edgeSize), colour = "black", size = 2.1) +
+    scale_x_continuous(breaks = thresholds) +
+    scale_colour_manual(values = hm_cols) +
+    scale_fill_manual(values = hm_cols, na.value="white") +
+    labs(x = "Diversity threshold", y = log10plab) +
+    facet_wrap(~Pathway, ncol = 2) +
+    theme(
+      legend.position = "none",
+      panel.grid.minor.y = element_blank(),
+      panel.grid.minor.x = element_blank(),
+    )
 }, simplify = FALSE)
 ```
 
@@ -1050,6 +1219,12 @@ ggarrange(
 )
 ```
 
+```{r}
+if (length(hm_gsea_eqtl_sig$EOfADvsWT)) {
+  pPlots_hm_gsea$EOfADvsWT
+}
+```
+
 #### MPS vs WT
 
 ```{r}
@@ -1060,6 +1235,12 @@ ggarrange(
   ncol = 1,
   heights = c(4,0.2,1)
 )
+```
+
+```{r}
+if (length(hm_gsea_eqtl_sig$MPSvsWT)) {
+  pPlots_hm_gsea$MPSvsWT
+}
 ```
 
 ### KEGG {.tabset .tabset-pills}
@@ -1228,7 +1409,9 @@ ggarrange(
 ```
 
 ```{r}
-pPlots_kg_gsea$EOfADvsWT
+if (length(kg_gsea_eqtl_sig$EOfADvsWT)) {
+  pPlots_kg_gsea$EOfADvsWT
+}
 ```
 
 #### MPS vs WT
@@ -1244,12 +1427,15 @@ ggarrange(
 ```
 
 ```{r}
-pPlots_kg_gsea$MPSvsWT
+if (length(kg_gsea_eqtl_sig$MPSvsWT)) {
+  pPlots_kg_gsea$MPSvsWT
+}
 ```
 
 ### Wikipathways {.tabset .tabset-pills}
 
 ```{r wk_gsea_eqtl}
+set.seed(220615)
 wk_gsea_eqtl <- colnames(contrasts) %>%
   sapply(function(cont){
     lapply(thresholds, function(threshVal){
@@ -1271,13 +1457,14 @@ wk_gsea_eqtl <- colnames(contrasts) %>%
           diversity_threshold = threshVal,
           rank = row_number(),
           bonf.p.adj = p.adjust(pval, "bonferroni"),
-          sig = factor(
-            ifelse(bonf.p.adj < 0.05, "DE", "Not DE"),
-            levels = c("DE", "Not DE")
-          )
+          sig = bonf.p.adj < 0.05
         )
     })
   }, simplify = FALSE)
+```
+
+```{r}
+wk_cols <- setNames(hue_pal()(length(names(wkByID))), names(wkByID))
 ```
 
 ```{r}
@@ -1310,9 +1497,9 @@ rankPlots_wk_gsea <- sapply(colnames(contrasts), function(cont){
     ggplot(aes(
       diversity_threshold,
       rel_rank,
-      # -log10(FDR.Mixed),
       group = Pathway,
       colour = Pathway,
+      fill = factor(ifelse(sig, Pathway, NA)),
       text = sprintf(
         paste0(
           "Pathway: %s<br>",
@@ -1326,12 +1513,13 @@ rankPlots_wk_gsea <- sapply(colnames(contrasts), function(cont){
       )
     )) +
     geom_line() +
-    geom_point(aes(shape = sig), size = 4) +
+    geom_point(shape = 21, size = 4) +
     geom_text(aes(label = rank), colour = "black", size = 2.1) +
     geom_text(aes(x = 1.01, label = label), size = 3.2, hjust = 0, na.rm = TRUE) +
     scale_y_reverse(breaks = seq(1, length(wk_gsea_eqtl_top[[cont]]), 1)) +
     scale_x_continuous(breaks = thresholds) +
-    scale_shape_manual(values = c(17, 19)) +
+    scale_fill_manual(values = wk_cols, na.value="white") +
+    scale_colour_manual(values = wk_cols) +
     labs(x = "Diversity score cut-off", y = "\nRelative rank") +
     theme(plot.margin = margin(0, 5, 0, 0, unit = "cm")) +
     coord_cartesian(clip = "off") +
@@ -1340,13 +1528,60 @@ rankPlots_wk_gsea <- sapply(colnames(contrasts), function(cont){
       panel.grid.minor.y = element_blank(),
       panel.grid.major.y = element_blank(),
       panel.grid.minor.x = element_blank(),
-      panel.grid.major.x = element_blank(),
       panel.border = element_blank(),
       axis.title.x = element_blank(),
-      axis.text.x = element_blank(),
-      axis.ticks.x = element_blank()
     )
   # }, tooltip = "text")
+}, simplify = FALSE)
+```
+
+```{r}
+wk_gsea_eqtl_sig <- sapply(wk_gsea_eqtl, function(contrast){
+  lapply(contrast, function(threshold){
+    threshold %>%
+      dplyr::filter(sig) %>%
+      pull(Pathway)
+  }) %>%
+    unlist() %>%
+    unique()
+}, simplify = FALSE)
+```
+
+```{r}
+pPlots_wk_gsea <- sapply(colnames(contrasts), function(cont){
+  lapply(wk_gsea_eqtl[[cont]], function(threshold){
+    threshold %>%
+      dplyr::filter(Pathway %in% wk_gsea_eqtl_sig[[cont]]) %>%
+      mutate(rel_rank = row_number())
+  }) %>%
+    bind_rows() %>%
+    mutate(
+      label = ifelse(
+        diversity_threshold == 1,
+        str_trunc(Pathway, width = 30),
+        NA
+      )
+    ) %>%
+    ggplot(aes(
+      diversity_threshold,
+      -log10(pval),
+      group = Pathway,
+      colour = Pathway,
+      fill = factor(ifelse(sig, Pathway, NA))
+    )) +
+    geom_line() +
+    geom_point(shape = 21, size = 4) +
+    geom_text(aes(label = edgeSize), colour = "black", size = 2.1) +
+    scale_x_continuous(breaks = thresholds) +
+    scale_colour_manual(values = wk_cols) +
+    scale_fill_manual(values = wk_cols, na.value="white") +
+    labs(x = "Diversity threshold", y = log10plab) +
+    facet_wrap(~Pathway, ncol = 2) +
+    theme(
+      legend.position = "none",
+      panel.grid.minor.y = element_blank(),
+      panel.grid.minor.x = element_blank(),
+    )
 }, simplify = FALSE)
 ```
 
@@ -1362,6 +1597,12 @@ ggarrange(
 )
 ```
 
+```{r}
+if (length(wk_gsea_eqtl_sig$EOfADvsWT)) {
+  pPlots_wk_gsea$EOfADvsWT
+}
+```
+
 #### MPS vs WT
 
 ```{r}
@@ -1373,3 +1614,27 @@ ggarrange(
   heights = c(4,0.2,1)
 )
 ```
+
+```{r}
+if (length(wk_gsea_eqtl_sig$MPSvsWT)) {
+  pPlots_wk_gsea$MPSvsWT
+}
+```
+
+# Tmp
+
+```{r}
+ttdiv <- map2(topTables, genes_diversity, function(tt, div){
+  left_join(tt, as_tibble(div))
+})
+lapply(seq_along(ttdiv), function(x){
+  mutate(ttdiv[[x]], contrast = names(ttdiv)[x]) %>%
+    dplyr::filter(!is.na(diversity))
+}) %>%
+  bind_rows() %>%
+  ggplot(aes(x = diversity, y = -log10(PValue))) +
+  geom_point() +
+  labs(x = "Diversity score", y = log10plab) +
+  facet_wrap(~contrast, ncol = 1)
+```
+
