--- a/R/de.Rmd
+++ b/R/de.Rmd
@@ -728,6 +728,51 @@ deCpmPlots <- map2(deGenes, comp_samples, function(genes, samples){
 
 No genes were classified as DE due to the EOfAD-like/+ genotype.
 
+```{r}
+tt <- topTables_cqn$`EOfAD-like`
+man <- tt %>%
+  mutate(mid = (start + end) / 2) %>%
+  dplyr::select(gene_id, gene_name, chromosome, mid, FDR) %>%
+  group_by(chromosome) %>%
+  summarise(chrLen = max(mid)) %>%
+  mutate(chrSt = cumsum(chrLen)-chrLen) %>%
+  dplyr::select(-chrLen) %>% 
+  left_join(tt) %>%
+  mutate(mid = (start + end) / 2) %>%
+  mutate(midCum = chrSt + mid) %>%
+  mutate(
+    colour = ifelse(chromosome %in% primary_chrs[c(TRUE, FALSE)], "a", "b"),
+    colour = ifelse(chromosome == "17", "c", colour)
+  )
+axis <- man %>%
+  group_by(chromosome) %>%
+  summarise(center = (max(midCum) + min(midCum)) / 2)
+ggplot(man, aes(x = midCum, y = -log10(PValue))) +
+  geom_point(aes(colour = colour, fill = chromosome, shape = DE), alpha = 1, size = 2) +
+  scale_color_manual(values = c("grey50", "grey80", "red")) +
+  scale_shape_manual(values = c(20, 17)) +
+  scale_x_continuous(label = axis$chromosome, breaks = axis$center) +
+  scale_y_continuous(expand = c(0, 0)) +
+  coord_cartesian(clip = "off") +
+  labs(
+    # title = paste0(unique(topTable$contrast)),
+    x = "Chromosome",
+    y = expression(paste(-log[10], "(p)"))
+  ) +
+  # geom_text_repel(
+  #   data = dplyr::filter(man, DE),
+  #   aes(label = gene_name, colour = colour),
+  #   size = 2.5,
+  #   max.overlaps = 50
+  # ) +
+  theme(
+    legend.position="none",
+    panel.border = element_blank(),
+    panel.grid.major.x = element_blank(),
+    panel.grid.minor.x = element_blank()
+  )
+```
+
 ## MPS-IIIB mutation
 
 A set of `r length(deGenes[[2]])` were classified as DE due to the MPS-IIB genotype.
@@ -776,50 +821,48 @@ deCpmPlots[[2]]
 ```
 
 ```{r}
-manPlots <- lapply(topTables_cqn, function(topTable){
-  man <- topTable %>%
-    mutate(mid = (start + end) / 2) %>%
-    dplyr::select(gene_id, gene_name, chromosome, mid, FDR) %>%
-    group_by(chromosome) %>%
-    summarise(chrLen = max(mid)) %>%
-    mutate(chrSt = cumsum(chrLen)-chrLen) %>%
-    dplyr::select(-chrLen) %>% 
-    left_join(topTable) %>%
-    mutate(mid = (start + end) / 2) %>%
-    mutate(midCum = chrSt + mid) %>%
-    mutate(
-      colour = ifelse(chromosome %in% primary_chrs[c(TRUE, FALSE)], "a", "b"),
-      colour = ifelse(chromosome == "7", "c", colour)
-    )
-  axis <- man %>%
-    group_by(chromosome) %>%
-    summarise(center = (max(midCum) + min(midCum)) / 2)
-  ggplot(man, aes(x = midCum, y = -log10(PValue))) +
-    geom_point(aes(colour = colour, fill = chromosome, shape = DE), alpha = 1, size = 2) +
-    scale_color_manual(values = c("grey50", "grey70", "red")) +
-    scale_shape_manual(values = c(20, 17)) +
-    scale_x_continuous(label = axis$chromosome, breaks = axis$center) +
-    scale_y_continuous(expand = c(0, 0)) +
-    coord_cartesian(clip = "off") +
-    labs(
-      # title = paste0(unique(topTable$contrast)),
-      x = "Chromosome",
-      y = expression(paste(-log[10], "(p)"))
-    ) +
-    # geom_text_repel(
-    #   data = dplyr::filter(man, DE),
-    #   aes(label = gene_name, colour = colour),
-    #   size = 2.5,
-    #   max.overlaps = 50
-    # ) +
-    theme(
-      legend.position="none",
-      panel.border = element_blank(),
-      panel.grid.major.x = element_blank(),
-      panel.grid.minor.x = element_blank()
-    )
-})
-manPlots
+tt <- topTables_cqn$`MPS-IIIB`
+man <- tt %>%
+  mutate(mid = (start + end) / 2) %>%
+  dplyr::select(gene_id, gene_name, chromosome, mid, FDR) %>%
+  group_by(chromosome) %>%
+  summarise(chrLen = max(mid)) %>%
+  mutate(chrSt = cumsum(chrLen)-chrLen) %>%
+  dplyr::select(-chrLen) %>% 
+  left_join(tt) %>%
+  mutate(mid = (start + end) / 2) %>%
+  mutate(midCum = chrSt + mid) %>%
+  mutate(
+    colour = ifelse(chromosome %in% primary_chrs[c(TRUE, FALSE)], "a", "b"),
+    colour = ifelse(chromosome == "24", "c", colour)
+  )
+axis <- man %>%
+  group_by(chromosome) %>%
+  summarise(center = (max(midCum) + min(midCum)) / 2)
+ggplot(man, aes(x = midCum, y = -log10(PValue))) +
+  geom_point(aes(colour = colour, fill = chromosome, shape = DE), alpha = 1, size = 2) +
+  scale_color_manual(values = c("grey50", "grey80", "red")) +
+  scale_shape_manual(values = c(20, 17)) +
+  scale_x_continuous(label = axis$chromosome, breaks = axis$center) +
+  scale_y_continuous(expand = c(0, 0)) +
+  coord_cartesian(clip = "off") +
+  labs(
+    # title = paste0(unique(topTable$contrast)),
+    x = "Chromosome",
+    y = expression(paste(-log[10], "(p)"))
+  ) +
+  # geom_text_repel(
+  #   data = dplyr::filter(man, DE),
+  #   aes(label = gene_name, colour = colour),
+  #   size = 2.5,
+  #   max.overlaps = 50
+  # ) +
+  theme(
+    legend.position="none",
+    panel.border = element_blank(),
+    panel.grid.major.x = element_blank(),
+    panel.grid.minor.x = element_blank()
+  )
 ```
 
 ## Data export
@@ -836,3 +879,76 @@ sessionInfo() %>%
   pander()
 ```
 
+# Publication plots
+
+```{r}
+tt <- topTables_chosen$`MPS-IIIB`
+man <- tt %>%
+  mutate(mid = (start + end) / 2) %>%
+  dplyr::select(gene_id, gene_name, chromosome, mid, FDR) %>%
+  dplyr::filter(!(chromosome %in% c("X", "Y", "MT"))) %>%
+  group_by(chromosome) %>%
+  summarise(chrLen = max(mid)) %>%
+  mutate(chrSt = cumsum(chrLen)-chrLen) %>%
+  dplyr::select(-chrLen) %>% 
+  left_join(tt) %>%
+  mutate(mid = (start + end) / 2) %>%
+  mutate(midCum = chrSt + mid) %>%
+  mutate(
+    colour = ifelse(chromosome %in% primary_chrs[c(TRUE, FALSE)], "a", "b"),
+    colour = ifelse(chromosome == "24", "c", colour)
+  )
+axis <- man %>%
+  group_by(chromosome) %>%
+  summarise(center = (max(midCum) + min(midCum)) / 2)
+a <- ggplot(man, aes(x = midCum, y = -log10(PValue))) +
+  geom_point(
+    data = man %>%
+      dplyr::filter(!DE),
+    aes(colour = colour),
+    shape = 20,
+    alpha = 1,
+    size = 1
+  ) +
+  scale_colour_manual(values = c("grey50", "grey80", "red")) +
+  geom_point(
+    data = man %>%
+      dplyr::filter(DE),
+    aes(fill = colour),
+    colour = "black",
+    shape = 23,
+    alpha = 1,
+    size = 1,
+    stroke = 0.3
+  ) +
+  scale_fill_manual(values = c("grey50", "grey80", "red")) +
+  scale_x_continuous(label = axis$chromosome, breaks = axis$center) +
+  scale_y_continuous(expand = c(0, 0)) +
+  coord_cartesian(clip = "off") +
+  labs(
+    x = "Chromosome",
+    y = expression(paste(-log[10], "(p)"))
+  ) +
+  theme(
+    legend.position="none",
+    panel.border = element_blank(),
+    panel.grid.major.x = element_blank(),
+    panel.grid.minor.x = element_blank(),
+    axis.text = element_text(size = rel(0.8)),
+    axis.title = element_text(size = rel(0.8))
+  )
+```
+
+```{r}
+ggarrange(a, ncol = 1)
+```
+
+```{r}
+ggsave(
+  "~/phd/publications/fisher/figures/figure_2.png",
+  device = "png",
+  width = 18,
+  height = 12,
+  units = "cm"
+)
+```
