--- a/R/variants.Rmd
+++ b/R/variants.Rmd
@@ -403,6 +403,33 @@ if (!file.exists(dist_winRanges_path)) {
 }
 ```
 
+```{r dgeList}
+dgeList <- readRDS(here("files/dgeList.Rds"))
+```
+
+```{r genes_diversity}
+## Takes ~5 mins to run so .Rds saved for convenience
+## Note a few genes are lost that do not fall within a diversity range
+genes_diversity_path <- here("files/genes_diversity.Rds")
+if (!file.exists(genes_diversity_path)) {
+  genes_diversity <- lapply(dist_winRanges, function(winRanges){
+    overlaps <- findOverlaps(GRanges(dgeList$genes), winRanges)
+    lapply(unique(queryHits(overlaps)), function(query){
+      subjects <- subjectHits(overlaps)[queryHits(overlaps) == query]
+      diversity <- winRanges$diversity[subjects] %>%
+        mean()
+      dgeList$genes[query,] %>%
+        mutate(diversity = diversity)
+    }) %>%
+      bind_rows() %>%
+      GRanges()
+  })
+  saveRDS(genes_diversity, genes_diversity_path)
+} else {
+  genes_diversity <- readRDS(genes_diversity_path)
+}
+```
+
 ### Visualisation
 
 ```{r plot_allele_dist}
@@ -551,3 +578,28 @@ plot_allele_dist(
   )
 )
 ```
+
+```{r}
+## Plotting DEG at various DAR thresholds
+chr <- "24"
+ind <- 2
+thresh <- 0.3
+plotGenes <- genes_diversity[[ind]] %>%
+  as_tibble() %>%
+  left_join(topDE[[ind]][,c("gene_id", "DE")]) %>%
+  dplyr::filter(DE, diversity <= thresh) %>%
+  GRanges()
+plot_allele_dist(
+  chr = chr,
+  genes = plotGenes,
+  mutation = genes[genes$gene_name == "naglu"],
+  dist = allele_dist[[ind]], dist_type = "l", dist_trans = 1,
+  lfc = lfc[[ind]], lfc_type = "heatmap", lfc_trans = 1/3,
+  title = paste0(
+    names(allele_dist[ind]),
+    " - dissimilarity win of ", dist_winSize, " SNVs",
+    " - logFC win of ", lfc_winSize, " genes"
+  )
+)
+```
+
